--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,13 @@
     "next": "15.3.2",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
+    "openai": "^4.100.0",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "uuid": "^11.1.0",
+    "youtube-transcript": "^1.2.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
