--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@distube/ytdl-core": "^4.16.12",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -18,12 +19,13 @@
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.9",
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.16.0",
+    "framer-motion": "^12.23.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
     "motion": "^12.22.0",
@@ -34,11 +36,11 @@
     "prisma": "^6.8.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.0",
     "uuid": "^11.1.0",
-    "youtube-transcript": "^1.2.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
